:art: markdown doc & file filter

--- a/xss-filter-web/src/main/resources/xss.properties
+++ b/xss-filter-web/src/main/resources/xss.properties
@@ -5,7 +5,8 @@ file.check.size=true
 file.check.type=true
 
 file.charset=UTF-8
-file.max.size=102400
-file.limit.type=application/octet-stream
+#50M
+file.max.size=52428800
+file.limit.type=application/octet-stream;text/html
 file.allowed.type=.zip,.rar,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.gif,.jpeg,.jpg,.pdf,.png,.bmp,.mp3,.txt,.xml
 
