--- a/xss-filter-web/src/main/webapp/WEB-INF/web.xml
+++ b/xss-filter-web/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>xss-filter</filter-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
 	<servlet>
@@ -49,6 +49,6 @@
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
